Population Pyramid is working (apparently)

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,21 +38,12 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(geopopr)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
 ```
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+```{r}
+pop_pyr('BRA',2030)
 ```
 
 In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
@@ -66,3 +57,7 @@ In that case, don't forget to commit and push the resulting figure files, so the
 **Parquet:** dados tabulares de grandes dimensões
 
 Arquivos binários grandes (geotiff, etc.) armazenados diretamente no sistema de arquivos, com os caminhos em banco de dados.
+
+# Fonte dos dados
+
+United Nations. (2024). World Population Prospects 2024. <https://population.un.org/wpp/>
